--- a/Index.html
+++ b/Index.html
@@ -174,7 +174,12 @@ footer{
 <a href="#order">Order</a>
 </nav>
 </header>
-
+<select id="pesanan">
+  <option>Espresso</option>
+  <option>Latte</option>
+  <option>Cappuccino</option>
+  <option>Kopi Susu Bincang</option>
+</select>
 <div class="hero">
 <div>
 <h2>Ngopi Lebih Mudah</h2>
